beta/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concentrationws-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: concentrationws
      version: "v1"
  template:
    metadata:
      labels:
        app: concentrationws
        version: "v1"
    spec:
      serviceAccountName: concentrationws
      containers:
      - name: muhtar
        image: muratzorer/muhtar:1.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        - containerPort: 9081
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: concentrationws
  labels:
    app: concentrationws
spec:
  ports:
  - port: 9080
    name: http-app
    targetPort: 9080
  - port: 9081
    name: http-actuator
    targetPort: 9081
  selector:
    app: concentrationws
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: concentrationws-api
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /concentrationws
    route:
    - destination:
        host: concentrationws
        subset: "v1"
        port:
          number: 9080
    timeout: 10s
  - match:
    - uri:
        prefix: /concentrationws/actuator
    route:
    - destination:
        host: concentrationws
        subset: "v1"
        port:
          number: 9081
    timeout: 10s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: concentrationws
spec:
  hosts:
  - concentrationws
  http:
  - route:
    - destination:
        host: concentrationws
        subset: "v1"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: concentrationws
spec:
  host: concentrationws
  subsets:
  - name: "v1"
    labels:
      version: "v1"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: core
spec:
  hosts:
  - fbtstesb.fibabanka.local
  location: MESH_INTERNAL
  ports:
  - number: 8082
    name: http
    protocol: HTTP
  resolution: DNS
